refactor civic data filtering